--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <div class="container">
     <!-- Full-width images with caption text -->
+        <div class="image-sliderfade fade">
+      <img src="rahul.jpeg" style="width: 100%" />
+      <div class="text">Image caption 2</div>
+    </div>
     <div class="image-sliderfade fade">
       <img src="one.jpeg" style="width: 100%" />
       <div class="text">Image caption 1</div>
